# M7GA

./: Bilibilicookies.json  README.md  cookies.json  get_cookie.py  main.py  pyproject.toml  sample.py
pyinstaller_hooks/: hook-pyside6.py
src/: main.py
src/model/: blivedmmodel.py
src/modelview/: blive.py
src/tool/: get_cookie.py
src/ui/: MainWindow.py  mainwidget.ui  mainwidget_ui.py  mainwindow.ui  mainwindow_ui.py
src/ui/menu/: LoginBilibili.py  LoginBilibili.ui  LoginBilibili_ui.py
